[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Portal.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 60.0
flag_align_y = true
flag_rotate_y = true
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.1
orbit_velocity = 0.3
orbit_velocity_random = 0.0
linear_accel = 0.25
radial_accel = 0.5
damping = 2.0
scale = 1.1

[sub_resource type="Animation" id=3]
resource_name = "cam_zoom"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D/Particles2D:process_material:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Portal" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="Area2D"]
amount = 64
lifetime = 3.0
process_material = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CameraZoom" type="AnimationPlayer" parent="Camera2D"]
anims/cam_zoom = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 3.8147e-06, 9.53674e-07 )
scale = Vector2( 8, 6.4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/portal_anim = SubResource( 4 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
